@@ -360,6 +360,46 @@ function add_empty_wishlist_buttons() {
 	}
 }
 
+function add_wishlist_notes() {
+	if(is_signed_in) {
+		var profile = $(".playerAvatar a")[0].href.replace("http://steamcommunity.com", "");
+		if (window.location.pathname.startsWith(profile)) {
+			$(".wishlistRow").each(function() {
+				var appid = $(this).attr("id").replace("game_", "");
+				$(this).find(".bottom_controls .popup_block2 .popup_body2").append("<a class='popup_menu_item2 tight es_add_wishlist_note' id='es_add_wishlist_note_" + appid + "'><h5>Add a wishlist note</h5></a>");
+				if (getValue(appid + "wishlist_note")) {
+					$(this).find("h4").after("<div class='es_wishlist_note'>" + getValue(appid + "wishlist_note") + "</div").css("padding-top", "6px");
+					$("#es_add_wishlist_note_" + appid).find("h5").text("Update wishlist note");
+					if ($(this).find(".es_wishlist_note")[0].scrollWidth > $(this).find(".es_wishlist_note")[0].clientWidth) { $(this).find(".es_wishlist_note").attr("title", getValue(appid + "wishlist_note")); }
+				}
+			});
+
+			$(".es_add_wishlist_note").click(function() {
+				$(".popup_block2").hide();
+				var appid = $(this).attr("id").replace("es_add_wishlist_note_", "");
+				if (getValue(appid + "wishlist_note")) {
+					var note = prompt("Update your wishlist note", getValue(appid + "wishlist_note"));
+				} else {
+					var note = prompt("Enter your wishlist note", "");
+				}
+				switch (note) {
+					case null:
+						break;
+					case "":
+						delValue(appid + "wishlist_note");
+						$("#game_" + appid).find(".es_wishlist_note").remove();
+						break;
+					default:
+						setValue(appid + "wishlist_note", note);
+						$("#game_" + appid).find(".es_wishlist_note").remove();
+						$("#game_" + appid).find("h4").after("<div class='es_wishlist_note'>" + getValue(appid + "wishlist_note") + "</div").css("padding-top", "6px");
+						if ($("#game_" + appid).find(".es_wishlist_note")[0].scrollWidth > $("#game_" + appid).find(".es_wishlist_note")[0].clientWidth) { $("#game_" + appid).find(".es_wishlist_note").attr("title", getValue(appid + "wishlist_note")); }
+				}
+			});
+		}
+	}
+}
+
 function add_remove_from_wishlist_button(appid) {
     if (is_signed_in()) {
         $(".demo_area_button").find("p").append(" (<span id='es_remove_from_wishlist' style='text-decoration: underline; cursor: pointer;'>Remove</span>)");		
@@ -4218,6 +4258,7 @@ $(document).ready(function(){
 							add_wishlist_filter();
 							add_wishlist_discount_sort();
 							add_wishlist_ajaxremove();
+							add_wishlist_notes();
 
 							start_highlights_and_tags();
 							break;
